Bug 246213. Fix regression where background colors aren't displayed on WinNT. Hopefully fixes it on Win98 as well. r=mkaply, sr=darin